# automotive_test_automation

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  sitemap.xml
Automation/CAPL/readme/: index.html
Automation/Github_Actions/readme/: index.html
Automation/Jenkins/readme/: index.html
Automation/Python/readme/: index.html
Build_Env/CMake/readme/: index.html
Miscellaneous/CMake/readme/: index.html
Miscellaneous/GIT/readme/: index.html
Miscellaneous/Github_Actions/readme/: index.html
Miscellaneous/Jenkins/readme/: index.html
Miscellaneous/PlantUML/readme/: index.html
Miscellaneous/YAML/mappings/: index.html
Miscellaneous/YAML/miscellaneous/: index.html
Miscellaneous/YAML/readme/: index.html
Miscellaneous/YAML/scalars/: index.html
Miscellaneous/YAML/sequences/: index.html
Miscellaneous/YAML/syntax_and_structure/: index.html
Projects/ABS/readme/: index.html
Projects/ADAS/readme/: index.html
Projects/BMS/readme/: index.html
Projects/IPC/readme/: index.html
Protocols/CAN/more_about_can/: index.html
Protocols/CAN/readme/: index.html
Protocols/DoIP/readme/: index.html
Protocols/UDS/readme/: index.html
Test_Env/Bench/readme/: index.html
Test_Env/HiL/readme/: index.html
Test_Env/SiL/readme/: index.html
Testing/ASPICE/readme/: index.html
Testing/readme/: index.html
_assets/: extra.css
docs/: .mkdocsignore  index.md
docs/Testing/: readme.md
docs/_assets/: extra.css
scripts/: deploy_docs_to_github.bat  serve_mkdocs_local.bat
search/: search_index.json
(+87 files in other folders)
