[project]
name = "automotive_test_automation"
version = "0.0.1"
description = "automotive testing and automation notes"
license = { text = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "chaitu-ycr", email = "chaitu.ycr@gmail.com" }]
keywords = ["python", "template"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
    "mkdocs-material",
    "mkdocstrings-python",
    "mkdocs-include-markdown-plugin"
]

[project.urls]
homepage = "https://github.com/chaitu-ycr/automotive_test_automation"
repository = "https://github.com/chaitu-ycr/automotive_test_automation"
documentation = "https://chaitu-ycr.github.io/automotive_test_automation/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
